--- a/public/sign_in.html
+++ b/public/sign_in.html
@@ -53,7 +53,7 @@
                   </button>
                 </div>
                 <div class="form-group">
-                  Not an user? <a href="sign_up.html">Sign up here</a>
+                  Not a user? <a href="sign_up.html">Sign up here</a>
                   <br />
                   <a href="index.html">Cancel and return home</a>
                 </div>
