--- a/public/post.html
+++ b/public/post.html
@@ -22,7 +22,8 @@
 
   <body>
     <div class="bg bg-blur">
-      <a class="btn btn btn-secondary button" href="index.html" role="button"
+      <!-- Deleted duplicate class "btn" -->
+      <a class="btn btn-secondary button" href="index.html" role="button"
       >Home</a
       >
       <div class="main">
