Convert input field to textarea field

--- a/public/post.html
+++ b/public/post.html
@@ -39,11 +39,13 @@
               <br />
               <label class="form-label"
                 ><h3>Content</h3>
-                <input
+                <!-- Converting input to text area so users can write on multiple lines -->
+                <textarea
                   id="textbox"
                   class="form-control"
                   type="text"
                   name="content"
+                  rows="10"
               /></label>
               <br />
               <!--onclick="window.location.href = 'http://localhost:3000/post.html'"-->
